Homepage - Fixing size and alignment of intro img

--- a/themes/openstack/scss/home-page.scss
+++ b/themes/openstack/scss/home-page.scss
@@ -938,7 +938,7 @@ a, a:visited {
 
 .intro-header.featured img {
   margin-top: -20px;
-  margin-right: -70px;
+  margin-right: -120px;
 }
 
 .intro-header-link {
